[package]
name = "example-056"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.6"
winit = "0.26.0"
wgpu = "0.12.0"
futures = "0.3"
vger = { git = "https://github.com/audulus/vger-rs" }
